--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ networks:
 services:
   db:
     image: mysql:5.7
-    container_name: java-intern-api
+    container_name: intern-api
     ports:
       - 3306:3306
     volumes:
       - "./.data/db:/var/lib/mysql"
     environment:
       MYSQL_ROOT_PASSWORD: pass
-      MYSQL_DATABASE: java-intern-api
+      MYSQL_DATABASE: intern-api
