--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 secretKey=3aa1739e-7a08-41fb-a4f2-c10318f46e4b
 dealerKey=3098
-basicUrl=https://it2.microf.com/api/
+basicUrl=https://it2.microf.com/api/v2/
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
