--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ secretKey=3aa1739e-7a08-41fb-a4f2-c10318f46e4b
 dealerKey=3098
 basicUrl=https://it2.microf.com/api/v2/
 
+server.error.include-message=always
+
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
